--- a/tablica.html
+++ b/tablica.html
@@ -7,7 +7,6 @@
     <title>TABLICA</title>
 </head>
 <body>
-    <h3>Tablica 1</h3>
-    <h3>Tablica 2</h3>
+   <h2>SVE OBRISANO</h2>
 </body>
 </html>
